--- a/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
@@ -1,126 +1,103 @@
-<form name="editForm" role="form" novalidate #editForm="ngForm" *ngIf="!isLoading; else loadingContainer">
-    <div *ngIf="result" class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
-        <jhi-alert></jhi-alert>
-        <div *ngIf="isOpenForSubmission" class="alert alert-warning">
-            <strong jhiTranslate="artemisApp.result.exerciseStillOpen">Exercise is still open for submissions!</strong>
-            <span jhiTranslate="artemisApp.result.studentOverride">
+<div *ngIf="result && !isLoading" class="modal-body">
+    <jhi-alert-error></jhi-alert-error>
+    <jhi-alert></jhi-alert>
+    <div *ngIf="isOpenForSubmission" class="alert alert-warning">
+        <strong jhiTranslate="artemisApp.result.exerciseStillOpen">Exercise is still open for submissions!</strong>
+        <span jhiTranslate="artemisApp.result.studentOverride">
                 The due date of this exercise is not reached yet. The student could override this manual result by committing a new solution.
             </span>
+    </div>
+    <div class="form-group" *ngIf="exercise.gradingInstructions">
+        <h3 for="id" jhiTranslate="artemisApp.exercise.gradingInstructions">Grading Instructions</h3>
+        <span [innerHTML]="exercise.gradingInstructions | htmlForMarkdown"></span>
+    </div>
+    <div class="form-group row align-items-end">
+        <div class="col-md-6">
+            <h4 class="control-label" jhiTranslate="artemisApp.result.resultString">Result Text</h4>
+            <input
+                type="text"
+                required
+                class="form-control"
+                [readOnly]="readOnly()"
+                name="resultString"
+                id="resultString"
+                [(ngModel)]="result.resultString"
+                (ngModelChange)="onResultModified.emit(result)"
+                #resultString="ngModel"
+            />
+            <span class="text-danger" *ngIf="resultString?.invalid && resultString?.errors?.required" jhiTranslate="artemisApp.result.resultStringRequired"
+            >Result text is required.</span
+            >
         </div>
-        <div class="form-group" *ngIf="exercise.gradingInstructions">
-            <h3 for="id" jhiTranslate="artemisApp.exercise.gradingInstructions">Grading Instructions</h3>
-            <span [innerHTML]="exercise.gradingInstructions | htmlForMarkdown"></span>
+    </div>
+    <div class="form-group row align-items-end">
+        <div class="col-md-6">
+            <h4 class="control-label" jhiTranslate="artemisApp.result.scorePercentage">Score (in %)</h4>
+            <input
+                type="number"
+                [pattern]="SCORE_PATTERN"
+                required
+                class="form-control"
+                name="score"
+                id="field_score"
+                [readOnly]="readOnly()"
+                [(ngModel)]="result.score"
+                (ngModelChange)="updateResultSuccess()"
+                #score="ngModel"
+            />
+            <span class="text-danger" *ngIf="score.dirty && score.invalid" jhiTranslate="artemisApp.result.invalidScore">Score is required and should be a number.</span>
         </div>
-        <div class="form-group row align-items-end">
-            <div class="col-md-6">
-                <h4 class="control-label" jhiTranslate="artemisApp.result.resultString">Result Text</h4>
-                <input
-                    type="text"
-                    required
-                    class="form-control"
-                    [readOnly]="readOnly()"
-                    name="resultString"
-                    id="resultString"
-                    [(ngModel)]="result.resultString"
-                    (ngModelChange)="onResultModified.emit(result)"
-                    #resultString="ngModel"
-                />
-                <span class="text-danger" *ngIf="resultString?.invalid && resultString?.errors?.required" jhiTranslate="artemisApp.result.resultStringRequired"
-                    >Result text is required.</span
+        <div class="checkbox col-md-6">
+            <label class="artemis-label">
+                <input type="checkbox" name="successful" [(ngModel)]="result.successful" [disabled]="true" />&nbsp;<span jhiTranslate="artemisApp.result.successful"
+            >Successful</span
+            >
+            </label>
+        </div>
+    </div>
+    <div class="form-group mb-0" *ngIf="!readOnly()">
+        <a [hidden]="feedbacks.length > 0" (click)="pushFeedback()" jhiTranslate="artemisApp.result.addFeedback">Add feedback</a>
+    </div>
+    <div *ngIf="feedbacks.length > 0">
+        <div *ngFor="let feedback of feedbacks; let i = index">
+            <div class="form-group">
+                <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }"> Feedback #{{ i + 1 }} Text </label>
+                <input type="text" class="form-control" name="feedbackText{{ i }}" [readOnly]="readOnly()" required [(ngModel)]="feedback.text"
+                       (ngModelChange)="updateResultFeedbacks()"
+                       #feedbackText="ngModel" />
+                <span class="text-danger" *ngIf="feedbackText?.invalid && feedbackText?.errors?.required" jhiTranslate="artemisApp.result.feedbackTextRequired"
+                >Feedback text is required.</span
                 >
             </div>
-        </div>
-        <div class="form-group row align-items-end">
-            <div class="col-md-6">
-                <h4 class="control-label" jhiTranslate="artemisApp.result.scorePercentage">Score (in %)</h4>
-                <input
-                    type="number"
-                    [pattern]="SCORE_PATTERN"
-                    required
-                    class="form-control"
-                    name="score"
-                    id="field_score"
-                    [readOnly]="readOnly()"
-                    [(ngModel)]="result.score"
-                    (ngModelChange)="updateResult()"
-                    #score="ngModel"
-                />
-                <span class="text-danger" *ngIf="score.dirty && score.invalid" jhiTranslate="artemisApp.result.invalidScore">Score is required and should be a number.</span>
-            </div>
-            <div class="checkbox col-md-6">
-                <label class="artemis-label">
-                    <input type="checkbox" name="successful" [(ngModel)]="result.successful" [disabled]="true" />&nbsp;<span jhiTranslate="artemisApp.result.successful"
-                        >Successful</span
-                    >
-                </label>
-            </div>
-        </div>
-        <div class="form-group mb-0" *ngIf="!readOnly()">
-            <a [hidden]="feedbacks.length > 0" (click)="pushFeedback()" jhiTranslate="artemisApp.result.addFeedback">Add feedback</a>
-        </div>
-        <div *ngIf="feedbacks.length > 0">
-            <div *ngFor="let feedback of feedbacks; let i = index">
-                <div class="form-group">
-                    <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }"> Feedback #{{ i + 1 }} Text </label>
-                    <input type="text" class="form-control" name="feedbackText{{ i }}" [readOnly]="readOnly()" required [(ngModel)]="feedback.text"
-                           (ngModelChange)="addFeedbackToResult()"
-                           #feedbackText="ngModel" />
-                    <span class="text-danger" *ngIf="feedbackText?.invalid && feedbackText?.errors?.required" jhiTranslate="artemisApp.result.feedbackTextRequired"
-                        >Feedback text is required.</span
-                    >
+            <div class="form-group row align-items-end">
+                <div class="col-md-6">
+                    <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }">
+                        Feedback #{{ i + 1 }} Detail Text
+                    </label>
+                    <textarea
+                        type="text"
+                        class="form-control"
+                        id="feedbackErrorText"
+                        name="feedbackErrorText{{ i }}"
+                        [readOnly]="readOnly()"
+                        [(ngModel)]="feedback.detailText"
+                        (ngModelChange)="updateResultFeedbacks()"
+                    ></textarea>
                 </div>
-                <div class="form-group row align-items-end">
-                    <div class="col-md-6">
-                        <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }">
-                            Feedback #{{ i + 1 }} Detail Text
-                        </label>
-                        <textarea
-                            type="text"
-                            class="form-control"
-                            id="feedbackErrorText"
-                            name="feedbackErrorText{{ i }}"
-                            [readOnly]="readOnly()"
-                            [(ngModel)]="feedback.detailText"
-                            (ngModelChange)="addFeedbackToResult()"
-                        ></textarea>
-                    </div>
-                    <div class="checkbox col-md-6">
-                        <label class="artemis-label">
-                            <input type="checkbox" name="positive{{ i }}" [disabled]="readOnly()" [(ngModel)]="feedback.positive" (ngModelChange)="addFeedbackToResult()"/>&nbsp;<span
-                                jhiTranslate="artemisApp.result.positive"
-                                >Positive</span
-                            >
-                        </label>
-                    </div>
+                <div class="checkbox col-md-6">
+                    <label class="artemis-label">
+                        <input type="checkbox" name="positive{{ i }}" [disabled]="readOnly()" [(ngModel)]="feedback.positive" (ngModelChange)="updateResultFeedbacks()"/>&nbsp;<span
+                        jhiTranslate="artemisApp.result.positive"
+                    >Positive</span
+                    >
+                    </label>
                 </div>
             </div>
         </div>
-        <div class="form-group mb-0" *ngIf="feedbacks.length > 0 && !readOnly()">
-            <a (click)="pushFeedback()" jhiTranslate="artemisApp.result.addFeedback">More feedback</a>
-            &nbsp;
-            <a (click)="popFeedback()" jhiTranslate="artemisApp.result.deleteFeedback">Less feedback</a>
-        </div>
-        <div class="mt-3" *ngIf="complaint">
-            <jhi-complaints-for-tutor-form
-                [complaint]="complaint"
-                [isAllowedToRespond]="complaint.complaintType === ComplaintType.COMPLAINT ? !isAssessor : isAssessor"
-                (updateAssessmentAfterComplaint)="onUpdateAssessmentAfterComplaint($event)"
-            >
-            </jhi-complaints-for-tutor-form>
-        </div>
     </div>
-    <div class="modal-footer" *ngIf="!complaint">
-        <button type="submit" [disabled]="editForm.invalid || isSaving" class="btn btn-primary" *ngIf="!result?.completionDate">
-            <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-        </button>
-        <button type="submit" [disabled]="editForm.invalid || isSaving" class="btn btn-danger" *ngIf="result?.completionDate && canOverride">
-            <span jhiTranslate="artemisApp.assessment.button.overrideAssessment">Override Assessment</span>
-        </button>
+    <div class="form-group mb-0" *ngIf="feedbacks.length > 0 && !readOnly()">
+        <a (click)="pushFeedback()" jhiTranslate="artemisApp.result.addFeedback">More feedback</a>
+        &nbsp;
+        <a (click)="popFeedback()" jhiTranslate="artemisApp.result.deleteFeedback">Less feedback</a>
     </div>
-</form>
-<ng-template #loadingContainer>
-    <div class="d-flex justify-content-center mt-4 mb-4">
-        <fa-icon [icon]="'circle-notch'" [spin]="true"></fa-icon>
-    </div>
-</ng-template>
+</div>
