add correct updateAssessmentAfterComplaint

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -31,7 +31,7 @@
     (submit)="submit()"
     (cancel)="cancel()"
     (nextSubmission)="nextSubmission()"
-    (updateAssessmentAfterComplaint)="updateAssessmentAfterComplaint($event)"
+    (updateAssessmentAfterComplaint)="onUpdateAssessmentAfterComplaint($event)"
 >
 
     <jhi-code-editor-grid *ngIf="!loadingParticipation && !participationCouldNotBeFetched" #grid [exerciseTitle]="exercise?.title" [isTutorAssessment]="true">
@@ -125,6 +125,7 @@
             [participationId]="participation.id"
             [result]="checkIfManualResultExist()"
             [exercise]="exercise"
+            [canOverride]="canOverride"
             (onResultModified)="test($event)"
         ></jhi-programming-assessment-manual-result-in-code-editor>
     </jhi-code-editor-grid>
