Add horizontal scroll bar if we are running out of space

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -121,7 +121,7 @@
         </div>
     </div>
     <div class="p-3">
-        <div *ngIf="exerciseGroup.exercises">
+        <div *ngIf="exerciseGroup.exercises" style="overflow-x: auto;">
             <table class="table table-striped">
                 <thead>
                     <tr>
