Show number of questions

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -295,7 +295,9 @@
                         </ng-container>
                         <ng-container *ngIf="exerciseGroupToExerciseTypesDict[exerciseGroup.id].includes(exerciseType.QUIZ)">
                             <td class="align-middle">
-                                <ng-container *ngIf="asQuizExercise(exercise) as quizExercise"> </ng-container>
+                                <ng-container *ngIf="asQuizExercise(exercise) as quizExercise">
+                                    {{ quizExercise.quizQuestions.length }}
+                                </ng-container>
                             </td>
                         </ng-container>
                         <ng-container *ngIf="exerciseGroupToExerciseTypesDict[exerciseGroup.id].includes(exerciseType.MODELING)">
