--- a/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
@@ -4,8 +4,8 @@
     <div *ngIf="isOpenForSubmission" class="alert alert-warning">
         <strong jhiTranslate="artemisApp.result.exerciseStillOpen">Exercise is still open for submissions!</strong>
         <span jhiTranslate="artemisApp.result.studentOverride">
-                The due date of this exercise is not reached yet. The student could override this manual result by committing a new solution.
-            </span>
+            The due date of this exercise is not reached yet. The student could override this manual result by committing a new solution.
+        </span>
     </div>
     <div class="form-group" *ngIf="exercise.gradingInstructions">
         <h3 for="id" jhiTranslate="artemisApp.exercise.gradingInstructions">Grading Instructions</h3>
@@ -26,7 +26,7 @@
                 #resultString="ngModel"
             />
             <span class="text-danger" *ngIf="resultString?.invalid && resultString?.errors?.required" jhiTranslate="artemisApp.result.resultStringRequired"
-            >Result text is required.</span
+                >Result text is required.</span
             >
         </div>
     </div>
@@ -50,8 +50,8 @@
         <div class="checkbox col-md-6">
             <label class="artemis-label">
                 <input type="checkbox" name="successful" [(ngModel)]="result.successful" [disabled]="true" />&nbsp;<span jhiTranslate="artemisApp.result.successful"
-            >Successful</span
-            >
+                    >Successful</span
+                >
             </label>
         </div>
     </div>
@@ -62,18 +62,23 @@
         <div *ngFor="let feedback of feedbacks; let i = index">
             <div class="form-group">
                 <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }"> Feedback #{{ i + 1 }} Text </label>
-                <input type="text" class="form-control" name="feedbackText{{ i }}" [readOnly]="readOnly()" required [(ngModel)]="feedback.text"
-                       (ngModelChange)="updateResultFeedbacks()"
-                       #feedbackText="ngModel" />
+                <input
+                    type="text"
+                    class="form-control"
+                    name="feedbackText{{ i }}"
+                    [readOnly]="readOnly()"
+                    required
+                    [(ngModel)]="feedback.text"
+                    (ngModelChange)="updateResultFeedbacks()"
+                    #feedbackText="ngModel"
+                />
                 <span class="text-danger" *ngIf="feedbackText?.invalid && feedbackText?.errors?.required" jhiTranslate="artemisApp.result.feedbackTextRequired"
-                >Feedback text is required.</span
+                    >Feedback text is required.</span
                 >
             </div>
             <div class="form-group row align-items-end">
                 <div class="col-md-6">
-                    <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }">
-                        Feedback #{{ i + 1 }} Detail Text
-                    </label>
+                    <label class="control-label" [ngClass]="{ negative: !feedback || !feedback.positive, positive: feedback.positive }"> Feedback #{{ i + 1 }} Detail Text </label>
                     <textarea
                         type="text"
                         class="form-control"
@@ -86,10 +91,13 @@
                 </div>
                 <div class="checkbox col-md-6">
                     <label class="artemis-label">
-                        <input type="checkbox" name="positive{{ i }}" [disabled]="readOnly()" [(ngModel)]="feedback.positive" (ngModelChange)="updateResultFeedbacks()"/>&nbsp;<span
-                        jhiTranslate="artemisApp.result.positive"
-                    >Positive</span
-                    >
+                        <input
+                            type="checkbox"
+                            name="positive{{ i }}"
+                            [disabled]="readOnly()"
+                            [(ngModel)]="feedback.positive"
+                            (ngModelChange)="updateResultFeedbacks()"
+                        />&nbsp;<span jhiTranslate="artemisApp.result.positive">Positive</span>
                     </label>
                 </div>
             </div>
